# sepulka

./: .env.example  .gitignore  README.md  pyproject.toml  readme.md
notes/: README.md
openspec/changes/archive/2026-07-10-add-contextual-intake-and-note-timestamps/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-contextual-intake-and-note-timestamps/specs/mvp-usability/: spec.md
openspec/changes/archive/2026-07-10-add-interactive-intake-loop/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-interactive-intake-loop/specs/mvp-usability/: spec.md
openspec/changes/archive/2026-07-10-improve-mvp-usability/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-improve-mvp-usability/specs/mvp-usability/: spec.md
openspec/changes/archive/2026-07-10-introduce-reusable-thinking-skills/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-introduce-reusable-thinking-skills/specs/thinking-skills/: spec.md
openspec/specs/mvp-usability/: spec.md
openspec/specs/thinking-skills/: spec.md
processes/: goldratt_conflict_cloud.yaml  problem_framing.yaml
sepulka/: __init__.py  init.py  llm.py  main.py  memory.py  notes.py  process_loader.py  process_runner.py  router.py
skills/goldratt_conflict_cloud/: skill.yaml
skills/problem_framing/: skill.yaml
tests/: test_main.py  test_process_loader.py  test_process_runner.py  test_router.py
